--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postprepare": "bash -c 'chmod ug+x .husky/*'"
   },
   "devDependencies": {
